# wacc-cpp

./: .cmake-format.json  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
cmake/: ExternalAntlr4Cpp.cmake  FindANTLR.cmake
include/wacc/: run.hh
src/wacc/: C.g4  codegen.cc  error.cc  main.cc  run.cc
src/wacc/include/wacc/: codegen.hh  error.hh
src/wacc_driver/: main.cc
src/wacc_test/: main.cc
